--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,12 @@ spring:
     url: jdbc:postgresql://localhost:5432/cloud_base
     username: postgres
     password:
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 12MB
+      file-size-threshold: 2MB
+
 minio:
   endpoint: http://localhost:9000
   access-key: minioadmin
