--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
       max-file-size: 10MB
       max-request-size: 12MB
       file-size-threshold: 2MB
+      enabled: true
 
 minio:
   endpoint: http://localhost:9000
